--- a/app.json
+++ b/app.json
@@ -1,4 +1,11 @@
 {
   "name": "antd_mobile_rn",
-  "displayName": "antd_mobile_rn"
+  "displayName": "antd_mobile_rn",
+  "expo": {
+    "name":"@ant-design/react-native",
+    "description":"基于蚂蚁金服移动设计规范的 React Native 组件库",
+    "icon": "./rn-kitchen-sink/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png",
+    "version":"4.2.0",
+    "entryPoint": "./expo/App.js"
+  }
 }
