--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@ant-design/tools": "^13.4.1-beta.0",
     "@babel/core": "^7.12.9",
+    "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/eslint-config": "^2.0.0",
@@ -74,6 +75,7 @@
     "cross-env": "^7.0.3",
     "enquire.js": "^2.1.1",
     "eslint": "^7.28.0",
+    "expo": "^42.0.3",
     "glob": "^7.1.1",
     "jest": "^26.6.3",
     "jsonml.js": "^0.1.0",
@@ -94,6 +96,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-web": "~0.13.12",
     "react-test-renderer": "17.0.2",
     "shell-utils": "^1.0.10",
     "ts-jest": "^25.4.0",
